--- a/skeleton/catalog-info.yaml
+++ b/skeleton/catalog-info.yaml
@@ -8,9 +8,20 @@ metadata:
     - android
     - kotlin
     - mobile
+
   annotations:
     github.com/project-slug: davyyelor/${{ values.appName }}
     backstage.io/techdocs-ref: dir:.
+    jenkins.io/job-full-name: ${{ values.appName }}-android-build
+
+  links:
+    - url: https://github.com/davyyelor/${{ values.appName }}
+      title: GitHub Repository
+      icon: github
+
+    - url: http://localhost:8080/job/${{ values.appName }}-android-build/
+      title: Jenkins Build
+      icon: build
 
 spec:
   type: mobile-app
