--- a/skeleton/catalog-info.yaml
+++ b/skeleton/catalog-info.yaml
@@ -12,14 +12,14 @@ metadata:
   annotations:
     github.com/project-slug: davyyelor/${{ values.appName }}
     backstage.io/techdocs-ref: dir:.
-    jenkins.io/job-full-name: ${{ values.appName }}-android-build
+    jenkins.io/job-full-name: backstage/${{ values.appName }}-android-build
 
   links:
     - url: https://github.com/davyyelor/${{ values.appName }}
       title: GitHub Repository
       icon: github
 
-    - url: http://localhost:8080/job/${{ values.appName }}-android-build/
+    - url: http://localhost:8080/job/backstage/${{ values.appName }}-android-build/
       title: Jenkins Build
       icon: build
 
